# webserv

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile-test  README.md  compose.yml  githooks_setup.sh  index.html  tests  vcpkg.json
.github/workflows/: build.yml
Examples/: request.http
config/: webserv.conf
docs/: DNS.md  Port numbers.md
docs/dev/: reactor.md
gtest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: webserv.h  webserv.hpp
root/: index.html
src/: Webserver.cpp  Webserver.hpp  main.cpp
src/core/: Expr.hpp  (+52 more)
test/: AstPrinter_test.cpp  ConfigParse_test.cpp  Env_test.cpp  Extractor_autoindex_test.cpp  Extractor_client_max_body_size_test.cpp  Extractor_error_page_test.cpp  Extractor_port_number_test.cpp  Extractor_return_page_test.cpp  Extractor_server_name_test.cpp  Extractor_test.cpp  Lexer_advance_test.cpp  Lexer_quote_test.cpp  Lexer_scanToken_test.cpp  Lexer_scantokens_test.cpp  Lexer_string_test.cpp  Lexer_test.cpp  LocationConfig_test.cpp  ParseException_test.cpp  Parser_test.cpp  RunTimeException_test.cpp  ServerConfig_addLocation_test.cpp  ServerConfig_test.cpp  SyntaxException_test.cpp  Token_test.cpp  address_resolver_test.cpp  client_test.cpp  event_loop_test.cpp  header_test.cpp  http_test.cpp  http_utils_test.cpp  main.cpp  mime_tests.cpp  program_unittest.cpp  request_parsing.cpp  socket_test.cpp  status_line_test.cpp  syntax_exception_test.cpp  token_test.cpp
(+123 files in other folders)
